--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "compute-cosine-similarity": "^1.0.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
@@ -19,8 +21,5 @@
     "express-handlebars": "^5.3.4",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.13"
   }
 }
