--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "6.x"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +22,8 @@
     "express-handlebars": "^5.3.4",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
