--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "jsonwebtoken": "^8.5.1",
+    "node-cache": "^5.1.2",
     "pg": "^8.7.1"
   },
   "devDependencies": {
